changed surver. fixed adding url pic. stretched the login and signup background

--- a/styles/_account_overlay.scss
+++ b/styles/_account_overlay.scss
@@ -9,7 +9,7 @@
 
 	padding: 6em 0;
 	position: absolute;
-	height: 100%;
+	height: 300%;
 	width: 100%;
 	background-color: rgba(0, 0, 0, .7);
 	text-align: center;
